--- a/main.html
+++ b/main.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Pinterest-like Hero Section.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="hero">
-        <div class="col-1">
- <img src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="img">
-        </div>
-        <div class="col-2">
- <h1>Welcome to my Pinterest clone</h1>
-<p>Discover new inspirations and find your favourite ideas</p>
-<button class="btn">Explore Now</button>
-        </div>
 
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	  <div class="hero">
+        <img class="img" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img">
+        <div class="div2">
+        <h1 class="h1">
+            Welcome to my Pinterest clone
+        </h1>
+        <p class="para">
+            Discover new inspiration and save your favourite ideas
+        </p>
+        <button class="btn" type="submit">Explore now</button>
     </div>
+    </div>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
